# ContextForge

./: .env.example  .gitattributes  .gitignore  .zenodo.json  AUDIT.md  BENCHMARKS.md  CHANGELOG-paper.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HFSPACES.md  LMCACHE.md  README.md  docker-compose.yml  fix_dco.sh  pyproject.toml  requirements.txt
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.jules/: bolt.md
.release/: sprint4-followups.md  techrxiv-submission.md  v7.0.0-rc.1.txt  zenodo-refresh.md
agents/: __init__.py  base_agent.py  demo_agents.py  pipeline.py
apohara_context_forge/: __init__.py  config.py  main.py  models.py  pipeline_config.py  pyproject.toml  token_counter.py
apohara_context_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apohara_context_forge/compression/: __init__.py  budget_manager.py  compressor.py  coordinator.py
apohara_context_forge/decoding/: __init__.py  speculative_coordinator.py
apohara_context_forge/dedup/: _deprecated_dedup_engine.py  embedder.py  faiss_index.py  lsh_engine.py  prefix_dedup.py
apohara_context_forge/embeddings/: __init__.py  embedding_engine.py
apohara_context_forge/kv_offset/: __init__.py  anchor_pool.py
apohara_context_forge/mcp/: __init__.py  server.py
apohara_context_forge/metrics/: collector.py  prometheus_metrics.py  vram_monitor.py
apohara_context_forge/multimodal/: __init__.py  visual_kv_cache.py
apohara_context_forge/normalization/: __init__.py
apohara_context_forge/observability/: __init__.py  audit_log.py  ledger.py  ledger_cli.py  otlp_exporter.py  prometheus_exporter.py  recorders.py
apohara_context_forge/quantization/: codec_v8.py  fwht.py  fwht_inplace.py  rotate_kv.py
apohara_context_forge/registry/: context_registry.py  vram_aware_cache.py
apohara_context_forge/routing/: kv_aware_router.py
apohara_context_forge/safety/: __init__.py  inv15_certifier.py  jcr_gate.py  z3_inv15_proof.py
apohara_context_forge/scheduling/: pbkv_predictor.py  queueing_controller.py  step_graph.py
apohara_context_forge/serving/: __init__.py  aiter_config.py  atom_plugin.py  lmcache_bridge.py  lmcache_connector.py  prefix_salt_planner.py  romy_plugin.py  vllm_client.py  vllm_launch_config.py
apohara_context_forge/storage/: __init__.py  token_dance.py
assets/: contextforge_pitch.pptx  techex-pitch-deck.md
benchmarks/: run_benchmark.py
configs/: lobstertrap_policy.yaml  sprint5_5agent.yaml
contextforge/: __init__.py  main.py  models.py  pyproject.toml  token_counter.py
contextforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboards/: inv15.json
demo/: __init__.py  app.py  benchmark.py  benchmark_v4.py  benchmark_v5.py  benchmark_v62_adversarial.py  benchmark_v62_adversarial_results.json  dashboard.py  requirements_dashboard.txt  run_devcloud.sh
deploy/: lmcache_config.yaml
docs/: v8-codec-design.md
hf_spaces/: README.md  app.py  requirements.txt
logs/: benchmark_v5_final.txt  benchmark_v6_check.txt  benchmark_v6_final.txt  local_cross_worker_result.json  local_measure_validation.json  local_smoke_rtx2060_result.json  mi300x_extreme_scale_1778627987.json  mi300x_extreme_scale_1778977872.json  mi300x_full_pytest_1778626253.json  mi300x_full_pytest_1778626270.json  mi300x_fwht_1778623189.json  mi300x_fwht_fp16_test_1778626796.json  mi300x_fwht_inplace_bench_1778626749.json  mi300x_fwht_inplace_bench_1778978015.json  mi300x_hbm3_bandwidth_1778624598.json  mi300x_hbm3_bandwidth_1778973430.json  mi300x_lmcache_1778626485.json  mi300x_lmcache_1778626535.json  mi300x_lmcache_1778978017.json  mi300x_pure_torch_fwht_1778624601.json  mi300x_pure_torch_fwht_1778973433.json  mi300x_quant_quality_1778626233.json  mi300x_quant_quality_1778978012.json  mi300x_run_paper_v2_20260517T002835Z.txt  mi300x_vram_1778623322.json  mi300x_vram_1778625301.json  mi300x_vram_1778973631.json  mi300x_vram_sweep_1778624264.json  mi300x_vram_sweep_1778625299.json  mi300x_vram_sweep_1778973581.json  milan_5agent_benchmark_1778943206.json  milan_5agent_h100_REAL_20260516T215940Z.json  milan_5agent_h100_baseline_20260516T213133Z.json  milan_5agent_h100_contextforge_20260516T215655Z.json  milan_h2h_baseline_1778943206.json  milan_h2h_contextforge_1778943206.json  rocm_smi_post_1778623189.json
logs_mi300x_p2/: _status.txt  mi300x_extreme_scale_1779813388.json  mi300x_hbm3_bandwidth_1779813225.json  mi300x_p2_extreme_scale.txt  mi300x_p2_forge_ledger.json  mi300x_p2_forge_ledger.txt  mi300x_p2_hbm3_bandwidth.txt  mi300x_p2_pytest.json  mi300x_p2_pytest.txt  mi300x_p2_quant_quality.txt  mi300x_quant_quality_1779813216.json
logs_moe_run/: MI300X_MOE_EVIDENCE.md  e2e_30b.json  e2e_coder.json  e2e_gptq.json  ledger_e2e_coder.jsonl  niah_30b.json  niah_coder.json  stageb_30b.json  stageb_coder.json  test_gen_30b.json  test_gen_coder.json  test_gen_gptq.json  vllm_bench_30b.txt  vllm_bench_coder.txt  vllm_bench_gptq.txt
operator/: PROJECT  README.md  go.mod  go.sum  integration_test.sh  validate.sh
paper/: README.md  inv15_paper.tex  references.bib  zenodo-v3-metadata.json
papers/: README.md  inv15_v2.tex  references.bib
pypi/apohara-vllm-plugin/: PUBLISH.md  README.md  pyproject.toml
pypi/apohara-vllm-plugin/src/apohara_vllm_plugin/: __init__.py
pypi/apohara-vllm-plugin/tests/: test_package.py
scripts/: _sprint5_pipeline.py  build_milan_benchmark.py  capture_kv_snapshots.py  check_honesty.sh  forge_p2_run_all.sh  generate_milan_clip.py  generate_techex_cover.py  local_cross_worker_smoke.py  local_smoke_rtx2060.py  mi300x_contextforge_e2e.py  mi300x_extreme_scale.py  mi300x_forge_ledger_proof.py  mi300x_fwht_fp16_test.py  mi300x_fwht_inplace_bench.py  mi300x_generate_figures.py  mi300x_hbm3_bandwidth.py  mi300x_lmcache_smoke.py  mi300x_measure.py  mi300x_moe_agent_ledger.py  mi300x_niah.py  mi300x_pure_torch_fwht.py  mi300x_quant_quality.py  mi300x_run_all.sh  mi300x_run_paper_v2.sh  mi300x_runbook.md  mi300x_smoke_fwht.sh  mi300x_squeeze_all.sh  nvml_vram_shim.py  (+10 more)
(+136 files in other folders)
