[project]
name = "contextforge"
version = "0.1.0"
requires-python = ">=3.11"
description = "The shared context compiler for multi-agent LLM systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pablo M. Suarez", email = "pablo@example.com"}
]
keywords = ["llm", "kv-cache", "multi-agent", "context-compression", "amd", "rocM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "llmlingua>=0.2.2",
    "torch>=2.4.0",
    "gradio>=4.40.0",
    "plotly>=5.22.0",
    "numpy>=1.26.0",
    "aiofiles>=23.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.entry-points."vllm.general_plugins"]
contextforge_romy = "contextforge.serving.romy_plugin:vLLMRomyPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"